projects/car-rental/car-helmchart/templates/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-rental-ui-app
  namespace: dev-ns
  labels:
    app: car-rental-ui-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: car-rental-ui-app
  template:
    metadata:
      labels:
        app: car-rental-ui-app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: car-rental-ui-container
        image: akumarraj/apps:car-rental-ui-0.1
        ports:
        - containerPort: 4173
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
