projects/car-rental/car-helmchart/templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-to-mysql
  namespace: dev-ns
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: car-rental-api
      ports:
        - protocol: TCP
          port: 3306
